トップページのCSS

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
   </div>
   <% if user_signed_in? %>
     <div class='new-plan'>
-      <%= link_to '新規作成', new_spot_path, class: "plan-btn" %>
+      <%= link_to '新規作成', new_map_path, class: "plan-btn" %>
     </div>
   <% end %>
   
